[gd_scene load_steps=19 format=2]

[ext_resource path="res://Dialogue/DialogueHUD/DialogueHUD.gd" type="Script" id=1]
[ext_resource path="res://Characters/NPCs/Default Girl Up.png" type="Texture" id=2]
[ext_resource path="res://Overworld/Sets/Maps/School/Classroom.tres" type="TileSet" id=3]
[ext_resource path="res://Dialogue/Text Files/Roboto-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Characters/Violet Portraits/Shocked Violet.png" type="Texture" id=5]
[ext_resource path="res://Dialogue/Text Files/Roboto-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Characters/NPCs/default boy up.png" type="Texture" id=7]
[ext_resource path="res://Characters/Particles.tres" type="SpriteFrames" id=8]
[ext_resource path="res://Characters/Violet/VioletAnimations.tres" type="SpriteFrames" id=9]
[ext_resource path="res://Overworld/Sets/Cutscenes/Classroom/Classroom.gd" type="Script" id=10]
[ext_resource path="res://Images/Walk Sprite 1.png" type="Texture" id=11]
[ext_resource path="res://Overworld/Sets/Maps/School/SchoolFurniture.tres" type="TileSet" id=12]
[ext_resource path="res://Dialogue/DialogueHUD/ChoiceButtons.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.3, 0.3 ),
"update": 0,
"values": [ Vector2( 128, 768 ), Vector2( 128, 464 ) ]
}

[node name="Classroom" type="Node2D"]
z_index = 3
z_as_relative = false
script = ExtResource( 10 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( 0, -64 )
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -65531, 1, 1, -65530, 1, 1, -65529, 1, 1, -65528, 1, 1, -65527, 1, 1, -65526, 1, 1, -65525, 1, 1, -65524, 1, 1, -65523, 1, 1, -65522, 1, 1, -65521, 1, 1, -65520, 1, 2, 65535, 1, 65536, 0, 1, 65537, 1, 1, 65537, 2, 1, 65537, 3, 1, 65537, 4, 1, 65537, 5, 1, 65537, 6, 1, 65537, 7, 1, 65537, 8, 1, 65537, 9, 1, 65537, 10, 1, 65537, 11, 1, 65537, 12, 1, 65537, 13, 1, 65537, 14, 1, 65537, 15, 1, 65537, 16, 1, 65538, 131071, 1, 65536, 65536, 1, 3, 65537, 1, 131073, 65538, 1, 131073, 65539, 1, 131073, 65540, 1, 131073, 65541, 1, 131073, 65542, 1, 131073, 65543, 1, 131073, 65544, 1, 131073, 65545, 1, 131073, 65546, 1, 131073, 65547, 1, 131073, 65548, 1, 131073, 65549, 1, 131073, 65550, 1, 4, 65551, 1, 65537, 65552, 1, 65538, 196607, 1, 65536, 131072, 1, 65538, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 1, 131072, 131087, 1, 131073, 131088, 1, 131074, 262143, 1, 65536, 196608, 1, 65538, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 327679, 1, 65536, 262144, 1, 65538, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 393215, 1, 65536, 327680, 1, 65538, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 1, 0, 327695, 1, 1, 327696, 1, 2, 458751, 1, 65536, 393216, 1, 65538, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 1, 65536, 393231, 1, 65537, 393232, 1, 65538, 524287, 1, 65536, 458752, 1, 65538, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 1, 65536, 458767, 1, 65537, 458768, 1, 65538, 589823, 1, 65536, 524288, 1, 65538, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 1, 65536, 524303, 1, 65537, 524304, 1, 65538, 655359, 1, 65536, 589824, 1, 65538, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 1, 65536, 589839, 1, 65537, 589840, 1, 65538, 720895, 1, 65536, 655360, 1, 65539, 655361, 1, 1, 655362, 1, 1, 655363, 1, 1, 655364, 1, 1, 655365, 1, 1, 655366, 1, 1, 655367, 1, 1, 655368, 1, 1, 655369, 1, 1, 655370, 1, 1, 655371, 1, 1, 655372, 1, 1, 655373, 1, 1, 655374, 1, 65540, 655375, 1, 65537, 655376, 1, 65538, 786431, 1, 131072, 720896, 1, 131073, 720897, 1, 131073, 720898, 1, 131073, 720899, 1, 131073, 720900, 1, 131073, 720901, 1, 131073, 720902, 1, 131073, 720903, 1, 131073, 720904, 1, 131073, 720905, 1, 131073, 720906, 1, 131073, 720907, 1, 131073, 720908, 1, 131073, 720909, 1, 131073, 720910, 1, 131073, 720911, 1, 131073, 720912, 1, 131074, 851967, 1, 0, 917503, 1, 0 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -64 )
tile_set = ExtResource( 12 )
format = 1
tile_data = PoolIntArray( 131078, 2, 0, 327683, 0, 0, 327685, 0, 0, 327687, 0, 0, 327689, 0, 0, 327691, 0, 0, 393219, 1, 0, 393221, 1, 0, 393223, 1, 0, 393225, 1, 0, 393227, 1, 0, 524291, 0, 0, 524293, 0, 0, 524295, 0, 0, 524297, 0, 0, 524299, 0, 0, 589827, 1, 0, 589829, 1, 0, 589831, 1, 0, 589833, 1, 0, 589835, 1, 0 )

[node name="DialogueHUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 1 )

[node name="DialoguePanel" type="Panel" parent="DialogueHUD"]
pause_mode = 2
anchor_left = 0.125
anchor_top = 0.787
anchor_right = 0.875
anchor_bottom = 1.0
margin_top = 264.32
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitHolder" type="Control" parent="DialogueHUD/DialoguePanel"]
anchor_left = 0.802
anchor_top = 0.091
anchor_right = 0.823
anchor_bottom = 0.182
margin_left = 8.06396
margin_top = 7.984
margin_right = -8.06403
margin_bottom = -8.032
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Polygon2D" parent="DialogueHUD/DialoguePanel/PortraitHolder"]
scale = Vector2( 0.72, 0.72 )
antialiased = true
texture = ExtResource( 5 )
texture_offset = Vector2( 150, 150 )
texture_scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 0, -192, 153.234, -143.551, 203.444, 0, 153.234, 143.551, 0, 192, -143.348, 143.551, -192, 0, -144, -144 )
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="DialogueHUD/DialoguePanel"]
anchor_left = 0.042
anchor_top = 0.143
anchor_right = 0.146
anchor_bottom = 0.338
margin_left = -0.256001
margin_top = -0.0239887
margin_right = 1.87199
margin_bottom = 0.0160065
custom_fonts/font = SubResource( 1 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceButtons" parent="DialogueHUD/DialoguePanel" instance=ExtResource( 14 )]
visible = false
anchor_left = 0.167969
anchor_top = -2.5625
anchor_right = 0.167969
anchor_bottom = -2.5625
margin_left = -1.52588e-05
margin_top = 0.0
margin_right = 509.0
margin_bottom = 260.0

[node name="Content" type="RichTextLabel" parent="DialogueHUD/DialoguePanel"]
anchor_left = 0.0620937
anchor_top = 0.318273
anchor_right = 0.924094
anchor_bottom = 0.865273
margin_left = 0.312008
margin_top = 1.39814
margin_right = -261.704
margin_bottom = 1.12614
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "suh dud [b]AYYYYYY[/b] [rainbow]LET'S GOOOOOOO[/rainbow]"
text = "suh dud AYYYYYY LET'S GOOOOOOO"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="DialogueHUD/DialoguePanel/Content"]
wait_time = 0.01

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueHUD/DialoguePanel"]
"anims/pop up" = SubResource( 5 )

[node name="NPC1" type="Sprite" parent="."]
position = Vector2( 224, 352 )
scale = Vector2( 0.0846667, 0.0846666 )
texture = ExtResource( 2 )

[node name="NPC2" type="Sprite" parent="."]
position = Vector2( 352, 352 )
scale = Vector2( 0.0846667, 0.0846667 )
texture = ExtResource( 7 )

[node name="NPC3" type="Sprite" parent="."]
position = Vector2( 479.75, 351.75 )
scale = Vector2( 0.0846667, 0.0846667 )
texture = ExtResource( 7 )

[node name="NPC4" type="Sprite" parent="."]
position = Vector2( 608, 352 )
scale = Vector2( 0.0846667, 0.0846666 )
texture = ExtResource( 2 )

[node name="NPC5" type="Sprite" parent="."]
position = Vector2( 736, 352 )
scale = Vector2( 0.0846667, 0.0846666 )
texture = ExtResource( 2 )

[node name="NPC6" type="Sprite" parent="."]
position = Vector2( 223.75, 543.75 )
scale = Vector2( 0.0846667, 0.0846667 )
texture = ExtResource( 7 )

[node name="Sleepy" type="AnimatedSprite" parent="."]
position = Vector2( 240, 528 )
scale = Vector2( 0.26, 0.260001 )
frames = ExtResource( 8 )
animation = "New Anim"
playing = true

[node name="NPC7" type="Sprite" parent="."]
position = Vector2( 351.75, 543.75 )
scale = Vector2( 0.0846667, 0.0846666 )
texture = ExtResource( 2 )

[node name="NPC8" type="Sprite" parent="."]
position = Vector2( 480, 544 )
scale = Vector2( 0.0846667, 0.0846667 )
texture = ExtResource( 7 )

[node name="NPC9" type="Sprite" parent="."]
position = Vector2( 608, 544 )
scale = Vector2( 0.0846667, 0.0846666 )
texture = ExtResource( 2 )

[node name="Teacher" type="AnimatedSprite" parent="."]
position = Vector2( 351.125, 218.875 )
scale = Vector2( 0.0876667, 0.093 )
frames = ExtResource( 9 )
animation = "downMove"
frame = 1
playing = true

[node name="Player" type="Sprite" parent="."]
position = Vector2( 736.125, 542.875 )
scale = Vector2( 0.0849999, 0.0823333 )
texture = ExtResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 332 )
[connection signal="gui_input" from="DialogueHUD/DialoguePanel" to="DialogueHUD/DialoguePanel" method="_on_DialogueHUD_gui_input"]
[connection signal="choiceMade" from="DialogueHUD/DialoguePanel/ChoiceButtons" to="DialogueHUD/DialoguePanel" method="_on_ChoiceButtons_choiceMade"]
[connection signal="choiceMade" from="DialogueHUD/DialoguePanel/ChoiceButtons" to="DialogueHUD" method="_on_ChoiceButtons_choiceMade"]
[connection signal="gui_input" from="DialogueHUD/DialoguePanel/Content" to="DialogueHUD/DialoguePanel" method="_on_Content_gui_input"]
